Quorum/Library/Tests/TypeCheckerGenerated/Pass/RetAssignObjectUndefined.quorum
class Main
    action Main
        Object v = Test()
        if v = undefined
            output "passed"
        end
    end

    action Test() returns Object
        return undefined
    end
end