Quorum/Library/Tests/TypeCheckerGenerated/Fail/RetAssignObject.quorum
class Main
    action Main
        undefined v = Test()
    end

    action Test() returns undefined
        Object var
        return var
    end
end